# mychem-mcp

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: configure_claude.py
src/mychem_mcp/: __init__.py  client.py  server.py
src/mychem_mcp/tools/: __init__.py  admet.py  annotation.py  batch.py  bioactivity.py  biological_context.py  clinical.py  drug.py  export.py  mapping.py  metadata.py  patent.py  query.py  structure.py
tests/: conftest.py  test_admet_tools.py  test_annotation_tools.py  test_batch_tools.py  test_bioactivity_tools.py  test_biological_context_tools.py  test_client.py  test_clinical_tools.py  test_drug_tools.py  test_export_tools.py  test_mapping_tools.py  test_metadata_tools.py  test_patent_tools.py  test_query_tools.py  test_structure_tools.py
