[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mychem-mcp"
version = "0.3.0"
description = "MCP server providing comprehensive access to MyChemInfo API for chemical and drug information"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Zhong Ren", email = "zhong.ren@hotmail.com"}]
dependencies = [
    "mcp",
    "httpx",
    "pydantic",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
mychem-mcp = "mychem_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mychem_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"