[project]
name = "mychem-mcp"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "fastmcp>=3.0.2,<4",
    "httpx",
    "pydantic",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
